k8s/deploy-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: crud-api
  name: crud-api
spec:
  selector:
    matchLabels:
      app: crud-api
  template:
    metadata:
      labels:
        app: crud-api
    spec:
      containers:
      - image: localhost:5001/crud/api
        name: crud-api
        imagePullPolicy: Always
