k8s/deploy-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-db
spec:
  selector:
    matchLabels:
      app: crud-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crud-db
    spec:
      volumes:
        - name: mysqldb
          configMap:
            name: mysqldb
      containers:
      - image: mysql:5.6
        name: crud-db
        imagePullPolicy: Always
        volumeMounts:
          - name: mysqldb
            mountPath: /docker-entrypoint-initdb.d
