k8s/deploy-web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: crud-web
  name: crud-web
spec:
  selector:
    matchLabels:
      app: crud-web
  template:
    metadata:
      labels:
        app: crud-web
    spec:
      containers:
      - image: localhost:5001/crud/web
        name: crud-web
        imagePullPolicy: Always
