k8s/service-api.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crud-api
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: crud-api
