k8s/service-db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crud-db
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: crud-db
