k8s/service-web.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crud-web
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: crud-web
