k8s/ingress-api.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-api
spec:
  rules:
  - host: crud-api.example.com
    http:
      paths:
      - backend:
          service:
            name: crud-api
            port:
              number: 3001
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - crud-api.example.com
    secretName: example
