k8s/ingress-web.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-web
spec:
  rules:
  - host: crud-web.example.com
    http:
      paths:
      - backend:
          service:
            name: crud-web
            port:
              number: 3000
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - crud-web.example.com
    secretName: example
